[package]
authors = ["chee <yay@chee.party>"]
edition = "2018"
name = "snootforge"
version = "0.1.0"
[dependencies]
typed-arena = "1.5"
chrono = "0.4"
chrono-humanize = "0.0.11"
comrak = "0.6"
futures = "0.1"
git2 = "0.9"
hyper = "0.12"
hyper-router = "0.5"
hyperlocal = "0.6"
maud = "0.21"
mime = "0.3"
lazy_static = "1"

[dependencies.syntect]
version = "3"
default-features = false
features = ["parsing", "html", "dump-load"]
